# cbnu-notice

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
.github/workflows/: build.yml  crawl.yml
deploy/: cbnu-notice.service  setup.sh  update.sh
src/: bot_commands.rs  category.rs  config.rs  db.rs  deadline.rs  dm_engine.rs  error.rs  main.rs  notifier.rs
src/parser/: ciboard.rs  egov.rs  mod.rs  php_master.rs  xe_board.rs
tests/fixtures/: ciboard_sample.html  egov_sample.html  php_master_ajax_sample.html  php_master_sample.html  xe_board_sample.html
