[package]
name = "cbnu-notice-bot"
version = "0.1.0"
edition = "2021"
description = "충북대학교 공지사항 자동 알림 텔레그램 봇"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["native-tls"] }
scraper = "0.18"
regex = "1"
teloxide = { version = "0.13", features = ["macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
